@@ -24,6 +24,7 @@ AC_ARG_ENABLE(benchmarks,
 AM_CONDITIONAL([WITH_BENCHMARKS], [test "x$WITH_BENCHMARKS" = "xyes"])
 
 # Checks for libraries.
+PKG_CHECK_MODULES([DEPS], [libenet])
 
 # Checks for header files.
 AC_CHECK_HEADERS([sys/time.h])
